Color pickers on product page is added + the headline for the product and the sizes. Picture is fixed so there is no stretch. Overall, the color 'blue' is added

--- a/app/public/style/productPage.css
+++ b/app/public/style/productPage.css
@@ -5,6 +5,74 @@
 }
 
 .chosenPicture {
-    width: 400px;
-    height: 300px;
+    width: 543px;
+    aspect-ratio: 1/1;
+    object-fit: cover;
+}
+
+.font-bold {
+    font-family: "Nexa-Bold";
+}
+
+.container-sizes-flex {
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    gap: 1vw;
+
+}
+
+.container-sizes-flex li {
+    white-space: nowrap;
+}
+
+.horizontal-line {
+    margin: 5px 5px 5px 5px;
+    width: auto;
+}
+
+
+.color-picker-flex {
+    display: flex;
+    flex-direction: row;
+    gap: 30px;
+}
+
+.product-name-header {
+    margin-bottom: 20px;
+}
+
+#green-button {
+    background-color: #51B2A2;
+    border-radius: 100%;
+    height: 30px;
+    width: 30px;
+}
+
+#blue-button {
+    background-color: #1E407A;
+    border-radius: 100%;
+    height: 30px;
+    width: 30px;
+}
+
+#yellow-button {
+    background-color: #FECD3E;
+    border-radius: 100%;
+    height: 30px;
+    width: 30px;
+}
+
+#pink-button {
+    background-color: #E990B9;
+    border-radius: 100%;
+    height: 30px;
+    width: 30px;
+}
+
+#orange-button {
+    background-color: #F15B39;
+    border-radius: 100%;
+    height: 30px;
+    width: 30px;
 }
